--- a/src/api/Infrastructure.Api.MediatR/Infrastructure.Api.MediatR.csproj
+++ b/src/api/Infrastructure.Api.MediatR/Infrastructure.Api.MediatR.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Ardalis.GuardClauses" Version="3.1.0" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="9.5.3" />
     <PackageReference Include="JetBrains.Annotations" Version="2020.3.0" />
     <PackageReference Include="MediatR" Version="9.0.0" />
