--- a/kubernetes/code.yaml
+++ b/kubernetes/code.yaml
@@ -19,3 +19,21 @@ spec:
           image: kuberneteslearning/code:1.0
           ports:
             - containerPort: 80
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: 80
+            initialDelaySeconds: 3
+            periodSeconds: 5
+            timeoutSeconds: 3
+          readinessProbe:
+            httpGet:
+              path: /health
+              port: 80
+            initialDelaySeconds: 3
+            periodSeconds: 5
+            timeoutSeconds: 3
+          resources:
+            limits:
+              memory: "256Mi"
+              cpu: "500m"
