--- a/src/apis/shortener/Hosting/appsettings.json
+++ b/src/apis/shortener/Hosting/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Database": {
+    "ConnectionString": "Host=localhost;Database=ShortenUrl;Username=postgres;Password=01031990Pc"
+  }
 }
