--- a/src/apis/shortener/Hosting/appsettings.json
+++ b/src/apis/shortener/Hosting/appsettings.json
@@ -1,13 +1,18 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Error",
+      "Microsoft": "Error",
+      "Microsoft.Hosting.Lifetime": "Error"
     }
   },
   "AllowedHosts": "*",
   "Database": {
     "ConnectionString": "Host=localhost;Database=ShortenUrl;Username=postgres;Password=01031990Pc"
-  }
+  },
+  "Api": {
+    "Code": {
+      "Url": "http://localhost:8080"
+    } 
+  } 
 }
